[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outreply"
version = "1.0.0"
description = "Official OutReply Python SDK — schedule posts, moderate comments, and subscribe to signed webhooks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "OutReply", email = "dev@outreply.com" }]
keywords = [
  "outreply",
  "social-media",
  "api",
  "sdk",
  "instagram",
  "facebook",
  "linkedin",
  "tiktok",
  "scheduling",
  "webhooks",
  "zapier",
  "automation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-httpx>=0.30"]

[project.urls]
Homepage = "https://outreply.com/developers"
Documentation = "https://outreply.com/api-docs"
Changelog = "https://outreply.com/api-changelog"
Source = "https://github.com/PlayPalsStudio/outreply-python"
Issues = "https://github.com/PlayPalsStudio/outreply-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/outreply"]
